--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "i18next": "21.6.10",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-i18next": "11.15.3",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
